# pgx-tak

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/: action.py  bitboard.py  consts.py  main.py  state.py  terminal.py  zobrist.py
