[project]
name = "pgx-tak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "jax[cuda12]>=0.8.2",
    "pgx>=2.6.0",
]

[dependency-groups]
dev = ["mypy", "ruff>=0.13.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "ANN",
    "B",
    "A",
    "C4",
    "PIE",
    "Q",
    "RET",
    "SIM",
    "TC",
    "ARG",
    "PTH",
    "NPY",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "I",
    "PL",
    "UP",
    "FURB",
    "RUF",
]

[tool.mypy]
follow_untyped_imports = true
