[project]
name = "pgx-tak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.14.14", "pytest>=9.0.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = [
    "ANN",
    "B",
    "A",
    "C4",
    "PIE",
    "Q",
    "RET",
    "SIM",
    "TC",
    "ARG",
    "PTH",
    "NPY",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "I",
    "PL",
    "UP",
    "FURB",
    "RUF",
]

[tool.mypy]
follow_untyped_imports = true

[tool.pytest]
python_files = ["*.py"]
